--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li class="nav-item"><a class="nav-link" href="#home" data-bs-dismiss="offcanvas">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about" data-bs-dismiss="offcanvas">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html" data-bs-dismiss="offcanvas">Contact</a></li>
-                <li class="nav-item mt-3"><a href="enroll.html" id="enrollMobileBtn" class="btn btn-enroll w-100" data-bs-dismiss="offcanvas">Enroll Now</a></li>
+                <li class="nav-item mt-3"><a href="enroll.html" id="enrollMobileBtn" class="btn btn-enroll w-100">Enroll Now</a></li>
             </ul>
         </div>
     </div>
